2009-02-13  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Components/TransactedTreeBuilder.cs:
	  Make sure insert callbacks are called when committing a
	  transaction. Fixes bug 442123 - When folder is added to
	  solution it no longer renames automatically.

2009-02-13  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Dialogs/CommonAboutDialog.cs: Fixed Bug
	  447428 - About dialog is completely unreadable when using a
	  dark theme.

2009-02-13  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Pads/ErrorListPad.cs: Properly refresh
	  on line changes.

2009-02-13  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui/HelpOperations.cs: Add an API for
	  looking up valid help URLs from a ResolveResult.

2009-02-13  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Pads/ErrorListPad.cs: Fix crash.

2009-02-12  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MonoDevelop.Ide.csproj:
	* MonoDevelop.Ide.Gui/HelpViewer.cs:
	* MonoDevelop.Ide.Gui/HelpOperations.cs:
	* MonoDevelop.Ide.Gui.Pads/MonodocTreePad.cs: Remove internal
	  help viewer, as it is no longer maintained, and requires a
	  browser addin.

2009-02-13  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectReferenceNodeBuilder.cs:
	  Show a warning icon when a reference is invalid.

	* MonoDevelop.Ide.Gui.Pads/ErrorListPad.cs: Show the project
	  name in the error list.

	* MonoDevelop.Ide.Tasks/Task.cs: When jumping to a task's
	  file, if there is no file found, select the owner project in
	  the solution pad.

2009-02-12  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui/DragNotebook.cs:
	* MonoDevelop.Ide.Gui.Dialogs/CombineEntryFeatureSelector.cs:
	  Dispose Gdk cursors, else finalisers destroy them outside of
	  the GUI thread and often crash MD due to X asserts resulting
	  in _XCBUnlockDisplay errors.

2009-02-12  Lluis Sanchez Gual  <lluis@novell.com>
