@@ -1,3 +1,8 @@
+2009-02-13  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.Ide.Gui/Document.cs: error underlining & folding
+	  now works on untitled files.
+
 2009-02-13  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* MonoDevelop.Ide.Gui.Components/TransactedTreeBuilder.cs:
